# ai-fordev-v2

./: .gitignore  README.md  business-from-code.md  email-agent.md  orchestrator.md  present.md
agent-temp/: index.md
backend/: pyproject.toml  seed_agents.json  seed_plugins.json
backend/app/: host.py  main.py  manager.py  orchestrator.py  registry.py
backend/app/agents/: card.py  executor.py  tools.py
backend/app/core/: adk_engine.py  llm.py  mcp.py  ollama.py  store.py  toolevents.py
backend/data/: agents.json  plugins.json  settings.json
frontend/: index.html  main.cjs  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentsView.tsx  ChatView.tsx  Markdown.tsx  PluginsView.tsx  RegistryModal.tsx  SettingsView.tsx
frontend/src/lib/: api.ts  mention.ts  stats.ts  toast.tsx
