[project]
name = "a2a-multi-agent-chat"
version = "0.1.0"
description = "A2A Multi-Agent Chat App using local Ollama"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "google-adk[extensions]>=2.3.0",
    "litellm>=1.83.14",
    "fastapi>=0.138.0",
    "starlette>=0.30.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
